deploy/control-plane/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controlplane
  namespace: control-plane
  labels:
    role: controlplane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controlplane
  template:
    metadata:
      labels:
        app: controlplane
    spec:
      serviceAccountName: llm-control-plane
      containers:
        - name: controlplane
          image: llmcontrolplane:1.0
          ports:
            - containerPort: 8080
