deploy/control-plane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlplane
  namespace: control-plane
spec:
  selector:
    app: controlplane
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
